  variable
- fix bug in genr: a long genr command could overflow the space
  allocated for variable labels
- fix bugs in graphing: "non-standard" graphs could cause problems
  including crashes
- fix bug in coefficient printing: sometimes values were being
  truncated at 5 figures
- when dataset is sub-sampled, add dialog offering option to
  restore full data range when saving data
- raise library revision number to 4

02/04/03 version 1.0.3
- Add PNG graphs to win32 version, and standardize on PNG graphs for
  all display including graph editing
- Add facility to identify labeled data-points in a scatter plot
- further fix to pathnames with .Rprofile for win32
- LaTeX view: fix for dvi file living in a directory with
  spaces in its name on win32
- Add option to copy as LaTeX or RTF for the various "Model data"
  windows (e.g. forecasts with standard errors)
- Reorganize management of win32 registry entries
- Add tramo/seats for win32 version, and make tramo support the
  default for Linux
- In window displaying a single data, add menu options to show 
  the series sorted, to graph the variable, and to format the data 
  values to a specified number of significant digits or decimal places
- Fix bug in command echo for "store" and a few others
- Add selector for variables to be saved when doing "Save as"
  or "Export"
- Add facility to browse for programs under the Preferences, 
  General, Programs tab
- Add facility to copy data to clipboard as CSV
- Update win32 version to gtk version 2.2.0
- Bring various details of the gtk-1.2 build in line with the
  gtk-2.0 version
- Add configuration option to avoid libreadline dependency
  ("--without-readline") and build the gretl rpm without readline
- Updates to manual
- Raise shared library revision number to 3

12/09/02 version 1.0.2
- generalize support for X-12-ARIMA to gtk-1.2 version, and 
  win32 version (TRAMO/SEATS proving is more difficult)
- make x-12-arima support the configure default, if the x12a