@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
 <!DOCTYPE gretldata SYSTEM "gretldata.dtd">
 
-<gretldata name="data9-7" frequency="4" startobs="1975.1" endobs="1990.4" type="time-series">
+<gretldata name="data9-7" frequency="4" startobs="1975:1" endobs="1990:4" type="time-series">
 <description>
+
 DATA9-7:
    Quarterly data compiled by Ophir Gottlieb
    **   all real dollar data are in 1982-84 dollars   **
@@ -25,8 +26,7 @@ DATA9-7:
    WINTER = 1 for the winter quarter and 0 otherwise.  The other
             seasonal dummies are defined similarly.                
 </description>
-<variables count="12">
-<variable name="YEAR"/>
+<variables count="11">
 <variable name="QNC"
  label="number of new cars sold (in thous.)"/>
 <variable name="PRICE"
@@ -48,69 +48,69 @@ DATA9-7:
 <variable name="FALL"/>
 </variables>
 <observations count="64" labels="false">
-<obs>1975.1 1923 60.2 8.985 8.98 8.7 93.145 215.973 1 0 0 0 </obs>
-<obs>1975.2 2165 62.9 9.176 7.32 8.6 93.845 216.489 0 1 0 0 </obs>
-<obs>1975.3 2198 62.8 9.167 7.56 8.3 95.241 217.004 0 0 1 0 </obs>
-<obs>1975.4 2328 63.9 9.307 7.58 8.3 95.846 217.520 0 0 0 1 </obs>
-<obs>1976.1 2381 65.4 9.376 6.83 7.5 96.456 218.035 1 0 0 0 </obs>
-<obs>1976.2 2788 66.2 9.439 6.90 7.5 97.190 218.586 0 1 0 0 </obs>
-<obs>1976.3 2416 66.6 9.474 7.09 7.8 97.818 219.137 0 0 1 0 </obs>
-<obs>1976.4 2513 68.6 9.454 6.54 7.9 98.294 219.688 0 0 0 1 </obs>
-<obs>1977.1 2617 68.8 9.561 6.25 7.3 98.791 220.239 1 0 0 0 </obs>
-<obs>1977.2 3195 69.3 9.586 6.47 7.1 98.397 220.826 0 1 0 0 </obs>
-<obs>1977.3 2668 70.2 9.716 6.90 6.9 99.904 221.412 0 0 1 0 </obs>
-<obs>1977.4 2688 72.0 9.793 7.67 6.3 100.631 221.999 0 0 0 1 </obs>
-<obs>1978.1 2540 74.2 9.813 7.98 6.2 101.319 222.585 1 0 0 0 </obs>
-<obs>1978.2 3337 74.6 10.037 8.30 5.8 102.222 223.203 0 1 0 0 </obs>
-<obs>1978.3 2713 75.6 10.047 9.14 5.9 102.957 223.820 0 0 1 0 </obs>
-<obs>1978.4 2710 77.2 10.139 10.81 5.9 103.896 224.438 0 0 0 1 </obs>
-<obs>1979.1 2739 78.9 10.176 11.75 5.7 104.845 225.055 1 0 0 0 </obs>
-<obs>1979.2 2942 81.1 10.159 11.72 5.7 105.864 225.723 0 1 0 0 </obs>
-<obs>1979.3 2571 82.3 10.155 12.12 5.8 106.755 226.391 0 0 1 0 </obs>
-<obs>1979.4 2396 83.1 10.094 15.08 5.9 107.585 227.058 0 0 0 1 </obs>
-<obs>1980.1 2511 85.1 10.172 16.40 6.3 106.590 227.726 1 0 0 0 </obs>
-<obs>1980.2 2139 87.3 9.955 16.32 7.3 105.595 228.286 0 1 0 0 </obs>
-<obs>1980.3 2130 88.4 9.977 11.61 7.6 104.600 228.846 0 0 1 0 </obs>
-<obs>1980.4 2189 90.2 10.051 16.73 7.5 104.900 229.406 0 0 0 1 </obs>
-<obs>1981.1 2373 90.8 10.104 19.21 7.4 105.200 229.966 1 0 0 0 </obs>
-<obs>1981.2 2207 91.8 10.053 18.93 7.4 105.500 230.522 0 1 0 0 </obs>
-<obs>1981.3 2192 95.0 10.115 20.32 7.4 105.800 231.077 0 0 1 0 </obs>
-<obs>1981.4 1754 95.5 10.109 17.01 8.1 106.075 231.633 0 0 0 1 </obs>
-<obs>1982.1 1944 96.8 9.976 16.27 8.7 106.350 232.188 1 0 0 0 </obs>
-<obs>1982.2 2094 96.7 10.099 16.50 9.3 106.625 232.718 0 1 0 0 </obs>
-<obs>1982.3 1910 98.0 10.047 14.72 9.8 106.900 233.248 0 0 1 0 </obs>
-<obs>1982.4 2032 97.9 10.008 11.96 10.5 107.425 233.770 0 0 0 1 </obs>
-<obs>1983.1 2045 98.5 10.086 10.67 10.2 107.950 234.307 1 0 0 0 </obs>
-<obs>1983.2 2505 99.2 10.143 10.50 10.0 108.475 234.817 0 1 0 0 </obs>
-<obs>1983.3 2237 99.8 10.269 10.67 9.2 109.000 235.328 0 0 1 0 </obs>
-<obs>1983.4 2394 100.9 10.381 11.00 8.4 109.750 235.838 0 0 0 1 </obs>
-<obs>1984.1 2584 101.6 10.609 11.00 7.8 110.500 236.348 1 0 0 0 </obs>
-<obs>1984.2 2895 102.3 10.706 12.00 7.4 111.250 236.878 0 1 0 0 </obs>
-<obs>1984.3 2448 102.9 10.758 12.92 7.3 112.000 237.407 0 0 1 0 </obs>
-<obs>1984.4 2463 103.5 10.773 11.33 7.2 112.675 237.937 0 0 0 1 </obs>
-<obs>1985.1 2644 104.5 10.922 10.50 7.2 113.350 238.466 1 0 0 0 </obs>
-<obs>1985.2 2988 105.5 11.038 10.00 7.2 114.025 239.012 0 1 0 0 </obs>
-<obs>1985.3 2968 106.1 10.926 9.50 7.1 114.700 239.559 0 0 1 0 </obs>
-<obs>1985.4 2442 106.9 10.960 9.50 7.0 115.350 240.105 0 0 0 1 </obs>
-<obs>1986.1 2600 107.8 11.090 9.33 6.9 116.000 240.651 1 0 0 0 </obs>
-<obs>1986.2 3046 108.9 11.381 8.50 7.1 116.650 241.189 0 1 0 0 </obs>
-<obs>1986.3 3124 111.2 11.252 7.67 6.9 117.300 241.728 0 0 1 0 </obs>
-<obs>1986.4 2689 112.3 11.227 7.50 6.8 117.925 242.266 0 0 0 1 </obs>
-<obs>1987.1 2341 114.1 11.271 7.50 6.5 118.550 242.804 1 0 0 0 </obs>
-<obs>1987.2 2767 113.5 10.877 7.83 6.2 119.175 243.358 0 1 0 0 </obs>
-<obs>1987.3 2785 115.1 11.263 8.25 5.9 119.800 243.913 0 0 1 0 </obs>
-<obs>1987.4 2382 115.6 11.441 8.75 5.8 120.225 244.467 0 0 0 1 </obs>
-<obs>1988.1 2636 115.1 11.520 8.58 5.6 120.650 245.021 1 0 0 0 </obs>
-<obs>1988.2 2864 115.7 11.586 8.67 5.4 121.075 245.601 0 1 0 0 </obs>
-<obs>1988.3 2556 117.0 11.794 9.50 5.4 121.500 246.182 0 0 1 0 </obs>
-<obs>1988.4 2486 118.5 11.875 10.17 5.2 121.825 246.762 0 0 0 1 </obs>
-<obs>1989.1 2337 118.4 11.820 10.83 5.1 122.150 247.342 1 0 0 0 </obs>
-<obs>1989.2 2757 119.2 11.829 11.33 5.2 122.475 247.985 0 1 0 0 </obs>
-<obs>1989.3 2631 119.2 11.905 10.50 5.2 122.800 248.628 0 0 1 0 </obs>
-<obs>1989.4 2053 119.5 11.866 10.50 5.3 122.925 249.270 0 0 0 1 </obs>
-<obs>1990.1 2310 121.2 11.921 10.00 5.2 123.050 249.913 1 0 0 0 </obs>
-<obs>1990.2 2532 120.4 11.925 10.00 5.2 123.175 250.597 0 1 0 0 </obs>
-<obs>1990.3 2358 120.4 11.930 10.00 5.5 123.300 251.282 0 0 1 0 </obs>
-<obs>1990.4 2100 121.4 11.703 10.00 5.9 123.300 251.966 0 0 0 1 </obs>
+<obs>1923 60.2 8.985 8.98 8.7 93.145 215.973 1 0 0 0 </obs>
+<obs>2165 62.9 9.176 7.32 8.6 93.845 216.489 0 1 0 0 </obs>
+<obs>2198 62.8 9.167 7.56 8.3 95.241 217.004 0 0 1 0 </obs>
+<obs>2328 63.9 9.307 7.58 8.3 95.846 217.520 0 0 0 1 </obs>
+<obs>2381 65.4 9.376 6.83 7.5 96.456 218.035 1 0 0 0 </obs>
+<obs>2788 66.2 9.439 6.90 7.5 97.190 218.586 0 1 0 0 </obs>
+<obs>2416 66.6 9.474 7.09 7.8 97.818 219.137 0 0 1 0 </obs>
+<obs>2513 68.6 9.454 6.54 7.9 98.294 219.688 0 0 0 1 </obs>
+<obs>2617 68.8 9.561 6.25 7.3 98.791 220.239 1 0 0 0 </obs>
+<obs>3195 69.3 9.586 6.47 7.1 98.397 220.826 0 1 0 0 </obs>
+<obs>2668 70.2 9.716 6.90 6.9 99.904 221.412 0 0 1 0 </obs>
+<obs>2688 72.0 9.793 7.67 6.3 100.631 221.999 0 0 0 1 </obs>
+<obs>2540 74.2 9.813 7.98 6.2 101.319 222.585 1 0 0 0 </obs>
+<obs>3337 74.6 10.037 8.30 5.8 102.222 223.203 0 1 0 0 </obs>
+<obs>2713 75.6 10.047 9.14 5.9 102.957 223.820 0 0 1 0 </obs>
+<obs>2710 77.2 10.139 10.81 5.9 103.896 224.438 0 0 0 1 </obs>
+<obs>2739 78.9 10.176 11.75 5.7 104.845 225.055 1 0 0 0 </obs>
+<obs>2942 81.1 10.159 11.72 5.7 105.864 225.723 0 1 0 0 </obs>
+<obs>2571 82.3 10.155 12.12 5.8 106.755 226.391 0 0 1 0 </obs>
+<obs>2396 83.1 10.094 15.08 5.9 107.585 227.058 0 0 0 1 </obs>
+<obs>2511 85.1 10.172 16.40 6.3 106.590 227.726 1 0 0 0 </obs>
+<obs>2139 87.3 9.955 16.32 7.3 105.595 228.286 0 1 0 0 </obs>
+<obs>2130 88.4 9.977 11.61 7.6 104.600 228.846 0 0 1 0 </obs>
+<obs>2189 90.2 10.051 16.73 7.5 104.900 229.406 0 0 0 1 </obs>
+<obs>2373 90.8 10.104 19.21 7.4 105.200 229.966 1 0 0 0 </obs>
+<obs>2207 91.8 10.053 18.93 7.4 105.500 230.522 0 1 0 0 </obs>
+<obs>2192 95.0 10.115 20.32 7.4 105.800 231.077 0 0 1 0 </obs>
+<obs>1754 95.5 10.109 17.01 8.1 106.075 231.633 0 0 0 1 </obs>
+<obs>1944 96.8 9.976 16.27 8.7 106.350 232.188 1 0 0 0 </obs>
+<obs>2094 96.7 10.099 16.50 9.3 106.625 232.718 0 1 0 0 </obs>
+<obs>1910 98.0 10.047 14.72 9.8 106.900 233.248 0 0 1 0 </obs>
+<obs>2032 97.9 10.008 11.96 10.5 107.425 233.770 0 0 0 1 </obs>
+<obs>2045 98.5 10.086 10.67 10.2 107.950 234.307 1 0 0 0 </obs>
+<obs>2505 99.2 10.143 10.50 10.0 108.475 234.817 0 1 0 0 </obs>
+<obs>2237 99.8 10.269 10.67 9.2 109.000 235.328 0 0 1 0 </obs>
+<obs>2394 100.9 10.381 11.00 8.4 109.750 235.838 0 0 0 1 </obs>
+<obs>2584 101.6 10.609 11.00 7.8 110.500 236.348 1 0 0 0 </obs>
+<obs>2895 102.3 10.706 12.00 7.4 111.250 236.878 0 1 0 0 </obs>
+<obs>2448 102.9 10.758 12.92 7.3 112.000 237.407 0 0 1 0 </obs>
+<obs>2463 103.5 10.773 11.33 7.2 112.675 237.937 0 0 0 1 </obs>
+<obs>2644 104.5 10.922 10.50 7.2 113.350 238.466 1 0 0 0 </obs>
+<obs>2988 105.5 11.038 10.00 7.2 114.025 239.012 0 1 0 0 </obs>
+<obs>2968 106.1 10.926 9.50 7.1 114.700 239.559 0 0 1 0 </obs>
+<obs>2442 106.9 10.960 9.50 7.0 115.350 240.105 0 0 0 1 </obs>
+<obs>2600 107.8 11.090 9.33 6.9 116.000 240.651 1 0 0 0 </obs>
+<obs>3046 108.9 11.381 8.50 7.1 116.650 241.189 0 1 0 0 </obs>
+<obs>3124 111.2 11.252 7.67 6.9 117.300 241.728 0 0 1 0 </obs>
+<obs>2689 112.3 11.227 7.50 6.8 117.925 242.266 0 0 0 1 </obs>
+<obs>2341 114.1 11.271 7.50 6.5 118.550 242.804 1 0 0 0 </obs>
+<obs>2767 113.5 10.877 7.83 6.2 119.175 243.358 0 1 0 0 </obs>
+<obs>2785 115.1 11.263 8.25 5.9 119.800 243.913 0 0 1 0 </obs>
+<obs>2382 115.6 11.441 8.75 5.8 120.225 244.467 0 0 0 1 </obs>
+<obs>2636 115.1 11.520 8.58 5.6 120.650 245.021 1 0 0 0 </obs>
+<obs>2864 115.7 11.586 8.67 5.4 121.075 245.601 0 1 0 0 </obs>
+<obs>2556 117.0 11.794 9.50 5.4 121.500 246.182 0 0 1 0 </obs>
+<obs>2486 118.5 11.875 10.17 5.2 121.825 246.762 0 0 0 1 </obs>
+<obs>2337 118.4 11.820 10.83 5.1 122.150 247.342 1 0 0 0 </obs>
+<obs>2757 119.2 11.829 11.33 5.2 122.475 247.985 0 1 0 0 </obs>
+<obs>2631 119.2 11.905 10.50 5.2 122.800 248.628 0 0 1 0 </obs>
+<obs>2053 119.5 11.866 10.50 5.3 122.925 249.270 0 0 0 1 </obs>
+<obs>2310 121.2 11.921 10.00 5.2 123.050 249.913 1 0 0 0 </obs>
+<obs>2532 120.4 11.925 10.00 5.2 123.175 250.597 0 1 0 0 </obs>
+<obs>2358 120.4 11.930 10.00 5.5 123.300 251.282 0 0 1 0 </obs>
+<obs>2100 121.4 11.703 10.00 5.9 123.300 251.966 0 0 0 1 </obs>
 </observations>
 </gretldata>
