@@ -9,6 +9,10 @@ version 1.0.4
   truncated at 5 figures
 - when dataset is sub-sampled, add dialog offering option to
   restore full data range when saving data
+- add recognition of environment variables GRETL_PNG_GRAPH_FONT
+  and GRETL_PNG_GRAPH_FONT_SIZE (e.g. "verdana" and "8") for
+  generation of PNG graphs when gnuplot is linked to gd, and
+  gd has TrueType font support enabled
 - raise library revision number to 4
 
 02/04/03 version 1.0.3
